# kol-torah-ingestion

./: .gitignore  LICENSE  README.md  kol-torah.code-workspace
admin/backend/: .env.example  README.md  pyproject.toml  run.py
admin/backend/api/: __init__.py  crud.py  database.py  main.py  schemas.py
admin/backend/api/routers/: __init__.py  rabbis.py  series.py
admin/frontend/: README.md  package.json  pnpm-lock.yaml
admin/frontend/src/: App.tsx  api.ts  types.ts
admin/frontend/src/components/: RabbiDialog.tsx  SeriesDialog.tsx
ingestion/: .env.example  README.md  cli.py  config.py  pyproject.toml  run_populate_metadata.py
ingestion/pipelines/: utils.py
ingestion/pipelines/transcript/: __init__.py  upload_existing_transcripts.py
ingestion/pipelines/youtube/: __init__.py  download_audio.py  fetch_youtube_videos.py  populate_video_metadata.py
