[tool.poetry]
name = "kol-torah-ingestion"
version = "0.1.0"
description = "Data ingestion pipelines for Torah lessons"
authors = ["Your Name <you@example.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.9"
kol-torah-db = {path = "../packages/kol-torah-db", develop = true}
sqlalchemy = "^2.0.0"
psycopg2-binary = "^2.9.0"
python-dotenv = "^1.0.0"
pydantic = "^2.5.0"
pydantic-settings = "^2.1.0"
click = "^8.1.0"
google-api-python-client = "^2.100.0"
boto3 = "^1.28.0"
isodate = "^0.6.1"
yt-dlp = "^2025.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
black = "^23.0.0"
flake8 = "^6.1.0"
mypy = "^1.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
